Creación de test unitarios

--- a/prestamos/templates/formularioPrestamo.html
+++ b/prestamos/templates/formularioPrestamo.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Solcitar Préstamo</h1>
+<h1>Solicitar Préstamo</h1>
 
 <form action="/pedido-prestamo/" method="POST">
     {% csrf_token %}
