--- a/prestamos/templates/listadoPrestamos.html
+++ b/prestamos/templates/listadoPrestamos.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Listado Préstamos</h1>
+<h1>Listado Solicitudes de Préstamos</h1>
 
 <table>
     <thead>
